--- a/mms_extractor_unified/demo.html
+++ b/mms_extractor_unified/demo.html
@@ -558,7 +558,10 @@
                 <div id="resultsContainer" style="display: none;">
                     <div class="result-tabs">
                         <button class="tab-button active" onclick="switchTab('extracted')">
-                            <i class="fas fa-code"></i> 추출 정보
+                            <i class="fas fa-table"></i> 추출 정보
+                        </button>
+                        <button class="tab-button" onclick="switchTab('json')">
+                            <i class="fas fa-code"></i> 추출 JSON
                         </button>
                         <button class="tab-button" onclick="switchTab('dag')" id="dagTabButton">
                             <i class="fas fa-project-diagram"></i> DAG 이미지
@@ -571,6 +574,12 @@
                     <div id="extractedTab" class="tab-content active">
                         <div class="result-container">
                             <div id="extractedResult" style="background: #f8fafc; padding: 20px; border-radius: 8px;"></div>
+                        </div>
+                    </div>
+
+                    <div id="jsonTab" class="tab-content">
+                        <div class="result-container">
+                            <pre id="jsonResult" class="json-viewer"></pre>
                         </div>
                     </div>
 
@@ -788,9 +797,13 @@ T world 앱에서 간편 예약
             resultsContainer.style.display = 'block';
             noResults.style.display = 'none';
 
-            // 추출 결과 표시
+            // 추출 결과 표시 (구조화된 테이블)
             const extractedResult = document.getElementById('extractedResult');
             extractedResult.innerHTML = formatExtractedResults(data.result);
+
+            // JSON 결과 표시 (원본 JSON)
+            const jsonResult = document.getElementById('jsonResult');
+            jsonResult.textContent = JSON.stringify(data.result, null, 2);
 
             // 메타데이터 표시
             const metadataContent = document.getElementById('metadataContent');
