--- a/mms_extractor_unified/demo.html
+++ b/mms_extractor_unified/demo.html
@@ -530,7 +530,7 @@
                             <label class="form-label" for="entityMode">개체명 추출 모드</label>
                             <select id="entityMode" class="form-input form-select">
                                 <option value="logic">통합 LLM 기반</option>
-                                <option value="llm">별도 LLM 기반</option>
+                                <option value="llm">분리 LLM 기반</option>
                             </select>
                         </div>
                     </div>
